--- a/webtapp.html
+++ b/webtapp.html
@@ -68,7 +68,47 @@
     <button type="button" class="bmenubutton">Aces/DF</button>
     <button type="button" class="bmenubutton">Total</button>
   </div>
-  <div>Bottom Text</div>
+  <div class="btt">Serve</div>
+  <table>
+    <tr class="table-row">
+      <td class="tl1">0</td>
+      <td class="tm1">Aces</td>
+      <td class="tr1">0</td>
+    </tr>
+    <tr class="table-row">
+      <td class="tl2">0</td>
+      <td class="tm2">Double Faults</td>
+      <td class="tr2">0</td>
+    </tr>
+    <tr class="table-row">
+      <td class="tl3"></td>
+      <td class="tm3">1st Serve %</td>
+      <td class="tr3"></td>
+    </tr>
+    <tr class="table-row">
+      <td class="tl4"></td>
+      <td class="tm4">1st Serve Won %</td>
+      <td class="tr4"></td>
+    </tr>
+    <tr class="table-row">
+      <td class="tl5"></td>
+      <td class="tm5">2nd Serve Won %</td>
+      <td class="tr5"></td>
+    </tr>
+    <tr class="table-row">
+      <td class="tl6"></td>
+      <td class="tm6">Break Points</td>
+      <td class="tr6"></td>
+    </tr>
+    <tr class="table-row">
+      <td class="tl7"></td>
+      <td class="tm7">Service Points Won %</td>
+      <td class="tr7"></td>
+    </tr>
+
+  </table>
+  <div class="btm">Return</div>
+  <div class="btb">Total</div>
   <hr>
   <div>Play-by-Play</div>
   <script>
@@ -76,6 +116,8 @@
     var bpts = 0;
     var agames = 0;
     var bgames = 0;
+    var asets = 0;
+    var bsets = 0;
     let prevSets = [];
     let gameScores = [0, 15, 30, 40];
     const score = document.querySelector('.score')
@@ -108,8 +150,10 @@
         apts = 0;
         agames++;
         if (agames === 6) {
-          agames = 0;
           prevSets.push(agames + '-' + bgames)
+          agames = 0;
+
+
         }
       }
       else {
