--- a/webtapp.html
+++ b/webtapp.html
@@ -69,46 +69,67 @@
     <button type="button" class="bmenubutton">Total</button>
   </div>
   <div class="btt">Serve</div>
-  <table>
-    <tr class="table-row">
-      <td class="tl1">0</td>
-      <td class="tm1">Aces</td>
-      <td class="tr1">0</td>
-    </tr>
-    <tr class="table-row">
-      <td class="tl2">0</td>
-      <td class="tm2">Double Faults</td>
-      <td class="tr2">0</td>
-    </tr>
-    <tr class="table-row">
-      <td class="tl3"></td>
-      <td class="tm3">1st Serve %</td>
-      <td class="tr3"></td>
-    </tr>
-    <tr class="table-row">
-      <td class="tl4"></td>
-      <td class="tm4">1st Serve Won %</td>
-      <td class="tr4"></td>
-    </tr>
-    <tr class="table-row">
-      <td class="tl5"></td>
-      <td class="tm5">2nd Serve Won %</td>
-      <td class="tr5"></td>
-    </tr>
-    <tr class="table-row">
-      <td class="tl6"></td>
-      <td class="tm6">Break Points</td>
-      <td class="tr6"></td>
-    </tr>
-    <tr class="table-row">
-      <td class="tl7"></td>
-      <td class="tm7">Service Points Won %</td>
-      <td class="tr7"></td>
-    </tr>
+  <div>
+    <table>
+      <tr class="table-row">
+        <td class="tl1">0</td>
+        <td class="tm1">Aces</td>
+        <td class="tr1">0</td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl2">0</td>
+        <td class="tm2">Double Faults</td>
+        <td class="tr2">0</td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl3"></td>
+        <td class="tm3">1st Serve %</td>
+        <td class="tr3"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl4"></td>
+        <td class="tm4">1st Serve Won %</td>
+        <td class="tr4"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl5"></td>
+        <td class="tm5">2nd Serve Won %</td>
+        <td class="tr5"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl6"></td>
+        <td class="tm6">Break Points</td>
+        <td class="tr6"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl7"></td>
+        <td class="tm7">Service Points Won %</td>
+        <td class="tr7"></td>
+      </tr>
 
-  </table>
+    </table>
+  </div>
   <div class="btm">Return</div>
   <div class="btb">Total</div>
+  <div>
+    <table>
+      <tr class="table-row">
+        <td class="bl1"></td>
+        <td class="bm1">Point Dominance</td>
+        <td class="br1"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="bl2">0</td>
+        <td class="bm2">Total Points Won</td>
+        <td class="br2">0</td>
+      </tr>
+      <tr class="table-row">
+        <td class="bl3">0:00</td>
+        <td class="bm3">Match Time</td>
+        <td class="br3">0:00</td>
+      </tr>
+    </table>
+  </div>
   <hr>
   <div>Play-by-Play</div>
   <script>
