--- a/webtapp.html
+++ b/webtapp.html
@@ -82,41 +82,81 @@
         <td class="tr2">0</td>
       </tr>
       <tr class="table-row">
-        <td class="tl3"></td>
+        <td class="tl3">-</td>
         <td class="tm3">1st Serve %</td>
-        <td class="tr3"></td>
+        <td class="tr3">-</td>
       </tr>
       <tr class="table-row">
-        <td class="tl4"></td>
+        <td class="tl4">-</td>
         <td class="tm4">1st Serve Won %</td>
-        <td class="tr4"></td>
+        <td class="tr4">-</td>
       </tr>
       <tr class="table-row">
-        <td class="tl5"></td>
+        <td class="tl5">-</td>
         <td class="tm5">2nd Serve Won %</td>
-        <td class="tr5"></td>
+        <td class="tr5">-</td>
       </tr>
       <tr class="table-row">
-        <td class="tl6"></td>
+        <td class="tl6">-</td>
         <td class="tm6">Break Points</td>
-        <td class="tr6"></td>
+        <td class="tr6">-</td>
       </tr>
       <tr class="table-row">
-        <td class="tl7"></td>
+        <td class="tl7">-</td>
         <td class="tm7">Service Points Won %</td>
-        <td class="tr7"></td>
+        <td class="tr7">-</td>
       </tr>
 
     </table>
   </div>
   <div class="btm">Return</div>
+  <div>
+    <table>
+      <tr class="table-row">
+        <td class="ml1">-</td>
+        <td class="mm1">1st Serve Return Won %</td>
+        <td class="mr1">-</td>
+      </tr>
+      <tr class="table-row">
+        <td class="ml2">-</td>
+        <td class="mm2">2nd Serve Return Won %</td>
+        <td class="mr2">-</td>
+      </tr>
+      <tr class="table-row">
+        <td class="ml3">-</td>
+        <td class="mm3">Return Points Won %</td>
+        <td class="mr3">-</td>
+      </tr>
+      <tr class="table-row">
+        <td class="ml4"></td>
+        <td class="mm4"></td>
+        <td class="mr4"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="ml5"></td>
+        <td class="mm5"></td>
+        <td class="mr5"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="ml6"></td>
+        <td class="mm6"></td>
+        <td class="mr6"></td>
+      </tr>
+      <tr class="table-row">
+        <td class="tl7"></td>
+        <td class="tm7"></td>
+        <td class="tr7"></td>
+      </tr>
+
+    </table>
+  </div>
   <div class="btb">Total</div>
   <div>
     <table>
       <tr class="table-row">
-        <td class="bl1"></td>
+        <td class="bl1">-</td>
         <td class="bm1">Point Dominance</td>
-        <td class="br1"></td>
+        <td class="br1">-</td>
       </tr>
       <tr class="table-row">
         <td class="bl2">0</td>
