--- a/webtapp.html
+++ b/webtapp.html
@@ -227,9 +227,21 @@
       const bl3 = document.querySelector('.bl3');
       bl3.textContent = ''
       const bm3 = document.querySelector('.bm3');
-      bm3.textContent = 'Avg. Set Time (min)'
+      bm3.textContent = 'Avg. Service Game Time (min)'
       const br3 = document.querySelector('.br3');
       br3.textContent = ''
+      const bl2 = document.querySelector('.bl2');
+      bl2.textContent = ''
+      const bm2 = document.querySelector('.bm2');
+      bm2.textContent = 'Avg. Game Time (min)'
+      const br2 = document.querySelector('.br2');
+      br2.textContent = ''
+      const bl1 = document.querySelector('.bl1');
+      bl1.textContent = ''
+      const bm1 = document.querySelector('.bm1');
+      bm1.textContent = 'Avg. Point Time (Sec)'
+      const br1 = document.querySelector('.br1');
+      br1.textContent = ''
 
 
 
