--- a/webtapp.html
+++ b/webtapp.html
@@ -242,7 +242,90 @@
       bm1.textContent = 'Avg. Point Time (Sec)'
       const br1 = document.querySelector('.br1');
       br1.textContent = ''
-
+      const ml5 = document.querySelector('.ml5');
+      ml5.textContent = ''
+      const mm5 = document.querySelector('.mm5');
+      mm5.textContent = ''
+      const mr5 = document.querySelector('.mr5');
+      mr5.textContent = ''
+      const ml4 = document.querySelector('.ml4');
+      ml4.textContent = ''
+      const mm4 = document.querySelector('.mm4');
+      mm4.textContent = ''
+      const mr4 = document.querySelector('.mr4');
+      mr4.textContent = ''
+      const ml3 = document.querySelector('.ml3');
+      ml3.textContent = ''
+      const mm3 = document.querySelector('.mm3');
+      mm3.textContent = 'Games Won %'
+      const mr3 = document.querySelector('.mr3');
+      mr3.textContent = ''
+      const ml2 = document.querySelector('.ml2');
+      ml2.textContent = ''
+      const mm2 = document.querySelector('.mm2');
+      mm2.textContent = 'Games Won'
+      const mr2 = document.querySelector('.mr2');
+      mr2.textContent = ''
+      const ml1 = document.querySelector('.ml1');
+      ml1.textContent = ''
+      const mm1 = document.querySelector('.mm1');
+      mm1.textContent = 'Games Played'
+      const mr1 = document.querySelector('.mr1');
+      mr1.textContent = ''
+      const ml6 = document.querySelector('.ml6');
+      ml6.textContent = ''
+      const mm6 = document.querySelector('.mm6');
+      mm6.textContent = ''
+      const mr6 = document.querySelector('.mr6');
+      mr6.textContent = ''
+      const ml7 = document.querySelector('.ml7');
+      ml7.textContent = ''
+      const mm7 = document.querySelector('.mm7');
+      mm7.textContent = ''
+      const mr7 = document.querySelector('.mr7');
+      mr7.textContent = ''
+      const tl1 = document.querySelector('.tl1');
+      tl1.textContent = ''
+      const tm1 = document.querySelector('.tm1');
+      tm1.textContent = 'Points Played'
+      const tr1 = document.querySelector('.tr1');
+      tr1.textContent = ''
+      const tl2 = document.querySelector('.tl2');
+      tl2.textContent = ''
+      const tm2 = document.querySelector('.tm2');
+      tm2.textContent = 'Points Won'
+      const tr2 = document.querySelector('.tr2');
+      tr2.textContent = ''
+      const tl3 = document.querySelector('.tl3');
+      tl3.textContent = ''
+      const tm3 = document.querySelector('.tm3');
+      tm3.textContent = 'Points Won %'
+      const tr3 = document.querySelector('.tr3');
+      tr3.textContent = ''
+      const tl4 = document.querySelector('.tl4');
+      tl4.textContent = ''
+      const tm4 = document.querySelector('.tm4');
+      tm4.textContent = 'Rtn. to Svc. Points Ratio'
+      const tr4 = document.querySelector('.tr4');
+      tr4.textContent = ''
+      const tl5 = document.querySelector('.tl5');
+      tl5.textContent = ''
+      const tm5 = document.querySelector('.tm5');
+      tm5.textContent = ''
+      const tr5 = document.querySelector('.tr5');
+      tr5.textContent = ''
+      const tl6 = document.querySelector('.tl6');
+      tl6.textContent = ''
+      const tm6 = document.querySelector('.tm6');
+      tm6.textContent = ''
+      const tr6 = document.querySelector('.tr6');
+      tr6.textContent = ''
+      const tl7 = document.querySelector('.tl7');
+      tl7.textContent = ''
+      const tm7 = document.querySelector('.tm7');
+      tm7.textContent = ''
+      const tr7 = document.querySelector('.tr7');
+      tr7.textContent = ''
 
 
     }
