--- a/webtapp.html
+++ b/webtapp.html
@@ -63,9 +63,9 @@
   <div class="Button Menu">
     <button type="button" class="bmenubutton" onclick="overviewbf()">Overview</button>
     <button type="button" class="bmenubutton" onclick="servingbf()">Serving</button>
-    <button type="button" class="bmenubutton">Returning</button>
-    <button type="button" class="bmenubutton">W/E & Net</button>
-    <button type="button" class="bmenubutton">Aces/DF</button>
+    <button type="button" class="bmenubutton" onclick="returnbf()">Returning</button>
+    <button type="button" class="bmenubutton" onclick="wenbf()">W/E & Net</button>
+    <button type="button" class="bmenubutton" onclick="adfbf()">Aces/DF</button>
     <button type="button" class="bmenubutton" onclick="totalbf()">Total</button>
   </div>
   <div class="btt">Serve</div>
@@ -595,6 +595,398 @@
       tr7.textContent = ''
       servingbfmiddle()
       servingbfbottom()
+    }
+
+    function returningbfbottom() {
+      const bl5 = document.querySelector('.bl5');
+      bl5.textContent = ''
+      const bm5 = document.querySelector('.bm5');
+      bm5.textContent = ''
+      const br5 = document.querySelector('.br5');
+      br5.textContent = ''
+      const bl4 = document.querySelector('.bl4');
+      bl4.textContent = ''
+      const bm4 = document.querySelector('.bm4');
+      bm4.textContent = ''
+      const br4 = document.querySelector('.br4');
+      br4.textContent = ''
+      const bl3 = document.querySelector('.bl3');
+      bl3.textContent = ''
+      const bm3 = document.querySelector('.bm3');
+      bm3.textContent = ''
+      const br3 = document.querySelector('.br3');
+      br3.textContent = ''
+      const bl2 = document.querySelector('.bl2');
+      bl2.textContent = ''
+      const bm2 = document.querySelector('.bm2');
+      bm2.textContent = 'Return Games Won per Set'
+      const br2 = document.querySelector('.br2');
+      br2.textContent = ''
+      const bl1 = document.querySelector('.bl1');
+      bl1.textContent = ''
+      const bm1 = document.querySelector('.bm1');
+      bm1.textContent = 'Return Games Won %'
+      const br1 = document.querySelector('.br1');
+      br1.textContent = ''
+    }
+
+    function servingbfmiddle() {
+      const ml5 = document.querySelector('.ml5');
+      ml5.textContent = ''
+      const mm5 = document.querySelector('.mm5');
+      mm5.textContent = 'Break Points'
+      const mr5 = document.querySelector('.mr5');
+      mr5.textContent = ''
+      const ml4 = document.querySelector('.ml4');
+      ml4.textContent = ''
+      const mm4 = document.querySelector('.mm4');
+      mm4.textContent = 'Points Won per Return Game'
+      const mr4 = document.querySelector('.mr4');
+      mr4.textContent = ''
+      const ml3 = document.querySelector('.ml3');
+      ml3.textContent = ''
+      const mm3 = document.querySelector('.mm3');
+      mm3.textContent = 'Points Per Return Game'
+      const mr3 = document.querySelector('.mr3');
+      mr3.textContent = ''
+      const ml2 = document.querySelector('.ml2');
+      ml2.textContent = ''
+      const mm2 = document.querySelector('.mm2');
+      mm2.textContent = 'Return In-Play Points Won'
+      const mr2 = document.querySelector('.mr2');
+      mr2.textContent = ''
+      const ml1 = document.querySelector('.ml1');
+      ml1.textContent = ''
+      const mm1 = document.querySelector('.mm1');
+      mm1.textContent = 'Return Points Won %'
+      const mr1 = document.querySelector('.mr1');
+      mr1.textContent = ''
+      const ml6 = document.querySelector('.ml6');
+      ml6.textContent = ''
+      const mm6 = document.querySelector('.mm6');
+      mm6.textContent = 'BPs per Return Game'
+      const mr6 = document.querySelector('.mr6');
+      mr6.textContent = ''
+      const ml7 = document.querySelector('.ml7');
+      ml7.textContent = ''
+      const mm7 = document.querySelector('.mm7');
+      mm7.textContent = 'BPs per Set'
+      const mr7 = document.querySelector('.mr7');
+      mr7.textContent = ''
+    }
+
+    function returnbf() {
+      const thead = document.querySelector('.btt');
+      thead.textContent = 'Return';
+      const mhead = document.querySelector('.btm');
+      mhead.textContent = 'Points';
+      const bhead = document.querySelector('.btb');
+      bhead.textContent = 'Games';
+
+      const tl1 = document.querySelector('.tl1');
+      tl1.textContent = ''
+      const tm1 = document.querySelector('.tm1');
+      tm1.textContent = '1st Serve Return Won %'
+      const tr1 = document.querySelector('.tr1');
+      tr1.textContent = ''
+      const tl2 = document.querySelector('.tl2');
+      tl2.textContent = ''
+      const tm2 = document.querySelector('.tm2');
+      tm2.textContent = '2nd Serve Return Won %'
+      const tr2 = document.querySelector('.tr2');
+      tr2.textContent = ''
+      const tl3 = document.querySelector('.tl3');
+      tl3.textContent = ''
+      const tm3 = document.querySelector('.tm3');
+      tm3.textContent = 'Return Rating'
+      const tr3 = document.querySelector('.tr3');
+      tr3.textContent = ''
+      const tl4 = document.querySelector('.tl4');
+      tl4.textContent = ''
+      const tm4 = document.querySelector('.tm4');
+      tm4.textContent = ''
+      const tr4 = document.querySelector('.tr4');
+      tr4.textContent = ''
+      const tl5 = document.querySelector('.tl5');
+      tl5.textContent = ''
+      const tm5 = document.querySelector('.tm5');
+      tm5.textContent = ''
+      const tr5 = document.querySelector('.tr5');
+      tr5.textContent = ''
+      const tl6 = document.querySelector('.tl6');
+      tl6.textContent = ''
+      const tm6 = document.querySelector('.tm6');
+      tm6.textContent = ''
+      const tr6 = document.querySelector('.tr6');
+      tr6.textContent = ''
+      const tl7 = document.querySelector('.tl7');
+      tl7.textContent = ''
+      const tm7 = document.querySelector('.tm7');
+      tm7.textContent = ''
+      const tr7 = document.querySelector('.tr7');
+      tr7.textContent = ''
+      returnbfmiddle()
+      returnbfbottom()
+    }
+    function wenbfbottom() {
+      const bl5 = document.querySelector('.bl5');
+      bl5.textContent = ''
+      const bm5 = document.querySelector('.bm5');
+      bm5.textContent = ''
+      const br5 = document.querySelector('.br5');
+      br5.textContent = ''
+      const bl4 = document.querySelector('.bl4');
+      bl4.textContent = ''
+      const bm4 = document.querySelector('.bm4');
+      bm4.textContent = ''
+      const br4 = document.querySelector('.br4');
+      br4.textContent = ''
+      const bl3 = document.querySelector('.bl3');
+      bl3.textContent = ''
+      const bm3 = document.querySelector('.bm3');
+      bm3.textContent = 'Dominance Ratio'
+      const br3 = document.querySelector('.br3');
+      br3.textContent = ''
+      const bl2 = document.querySelector('.bl2');
+      bl2.textContent = ''
+      const bm2 = document.querySelector('.bm2');
+      bm2.textContent = 'Game Dominance'
+      const br2 = document.querySelector('.br2');
+      br2.textContent = ''
+      const bl1 = document.querySelector('.bl1');
+      bl1.textContent = ''
+      const bm1 = document.querySelector('.bm1');
+      bm1.textContent = 'Points Dominance'
+      const br1 = document.querySelector('.br1');
+      br1.textContent = ''
+    }
+    function wenbfmiddle() {
+      const ml5 = document.querySelector('.ml5');
+      ml5.textContent = ''
+      const mm5 = document.querySelector('.mm5');
+      mm5.textContent = ''
+      const mr5 = document.querySelector('.mr5');
+      mr5.textContent = ''
+      const ml4 = document.querySelector('.ml4');
+      ml4.textContent = ''
+      const mm4 = document.querySelector('.mm4');
+      mm4.textContent = 'Net Effectiveness'
+      const mr4 = document.querySelector('.mr4');
+      mr4.textContent = ''
+      const ml3 = document.querySelector('.ml3');
+      ml3.textContent = ''
+      const mm3 = document.querySelector('.mm3');
+      mm3.textContent = 'Points Won at Net %'
+      const mr3 = document.querySelector('.mr3');
+      mr3.textContent = ''
+      const ml2 = document.querySelector('.ml2');
+      ml2.textContent = ''
+      const mm2 = document.querySelector('.mm2');
+      mm2.textContent = 'Net Points Won %'
+      const mr2 = document.querySelector('.mr2');
+      mr2.textContent = ''
+      const ml1 = document.querySelector('.ml1');
+      ml1.textContent = ''
+      const mm1 = document.querySelector('.mm1');
+      mm1.textContent = 'Net Points %'
+      const mr1 = document.querySelector('.mr1');
+      mr1.textContent = ''
+      const ml6 = document.querySelector('.ml6');
+      ml6.textContent = ''
+      const mm6 = document.querySelector('.mm6');
+      mm6.textContent = ''
+      const mr6 = document.querySelector('.mr6');
+      mr6.textContent = ''
+      const ml7 = document.querySelector('.ml7');
+      ml7.textContent = ''
+      const mm7 = document.querySelector('.mm7');
+      mm7.textContent = ''
+      const mr7 = document.querySelector('.mr7');
+      mr7.textContent = ''
+    }
+    function wenbf() {
+      const thead = document.querySelector('.btt');
+      thead.textContent = 'Winners & Errors';
+      const mhead = document.querySelector('.btm');
+      mhead.textContent = 'Net';
+      const bhead = document.querySelector('.btb');
+      bhead.textContent = 'Dominance';
+
+      const tl1 = document.querySelector('.tl1');
+      tl1.textContent = ''
+      const tm1 = document.querySelector('.tm1');
+      tm1.textContent = 'Winner %'
+      const tr1 = document.querySelector('.tr1');
+      tr1.textContent = ''
+      const tl2 = document.querySelector('.tl2');
+      tl2.textContent = ''
+      const tm2 = document.querySelector('.tm2');
+      tm2.textContent = 'Error %'
+      const tr2 = document.querySelector('.tr2');
+      tr2.textContent = ''
+      const tl3 = document.querySelector('.tl3');
+      tl3.textContent = ''
+      const tm3 = document.querySelector('.tm3');
+      tm3.textContent = 'Winners per Error'
+      const tr3 = document.querySelector('.tr3');
+      tr3.textContent = ''
+      const tl4 = document.querySelector('.tl4');
+      tl4.textContent = ''
+      const tm4 = document.querySelector('.tm4');
+      tm4.textContent = 'Winners per Opp. Error'
+      const tr4 = document.querySelector('.tr4');
+      tr4.textContent = ''
+      const tl5 = document.querySelector('.tl5');
+      tl5.textContent = ''
+      const tm5 = document.querySelector('.tm5');
+      tm5.textContent = ''
+      const tr5 = document.querySelector('.tr5');
+      tr5.textContent = ''
+      const tl6 = document.querySelector('.tl6');
+      tl6.textContent = ''
+      const tm6 = document.querySelector('.tm6');
+      tm6.textContent = ''
+      const tr6 = document.querySelector('.tr6');
+      tr6.textContent = ''
+      const tl7 = document.querySelector('.tl7');
+      tl7.textContent = ''
+      const tm7 = document.querySelector('.tm7');
+      tm7.textContent = ''
+      const tr7 = document.querySelector('.tr7');
+      tr7.textContent = ''
+      wenbfmiddle()
+      wenbfbottom()
+    }
+
+    function adfbfbottom() {
+      const bl5 = document.querySelector('.bl5');
+      bl5.textContent = ''
+      const bm5 = document.querySelector('.bm5');
+      bm5.textContent = ''
+      const br5 = document.querySelector('.br5');
+      br5.textContent = ''
+      const bl4 = document.querySelector('.bl4');
+      bl4.textContent = ''
+      const bm4 = document.querySelector('.bm4');
+      bm4.textContent = ''
+      const br4 = document.querySelector('.br4');
+      br4.textContent = ''
+      const bl3 = document.querySelector('.bl3');
+      bl3.textContent = ''
+      const bm3 = document.querySelector('.bm3');
+      bm3.textContent = ''
+      const br3 = document.querySelector('.br3');
+      br3.textContent = ''
+      const bl2 = document.querySelector('.bl2');
+      bl2.textContent = ''
+      const bm2 = document.querySelector('.bm2');
+      bm2.textContent = ''
+      const br2 = document.querySelector('.br2');
+      br2.textContent = ''
+      const bl1 = document.querySelector('.bl1');
+      bl1.textContent = ''
+      const bm1 = document.querySelector('.bm1');
+      bm1.textContent = 'Ace/DF Ratio'
+      const br1 = document.querySelector('.br1');
+      br1.textContent = ''
+    }
+
+    function adfbfmiddle() {
+      const ml5 = document.querySelector('.ml5');
+      ml5.textContent = ''
+      const mm5 = document.querySelector('.mm5');
+      mm5.textContent = 'DFs per Set'
+      const mr5 = document.querySelector('.mr5');
+      mr5.textContent = ''
+      const ml4 = document.querySelector('.ml4');
+      ml4.textContent = ''
+      const mm4 = document.querySelector('.mm4');
+      mm4.textContent = 'DFs per Service Game'
+      const mr4 = document.querySelector('.mr4');
+      mr4.textContent = ''
+      const ml3 = document.querySelector('.ml3');
+      ml3.textContent = ''
+      const mm3 = document.querySelector('.mm3');
+      mm3.textContent = 'DFs per 2nd Serve'
+      const mr3 = document.querySelector('.mr3');
+      mr3.textContent = ''
+      const ml2 = document.querySelector('.ml2');
+      ml2.textContent = ''
+      const mm2 = document.querySelector('.mm2');
+      mm2.textContent = 'Double Fault %'
+      const mr2 = document.querySelector('.mr2');
+      mr2.textContent = ''
+      const ml1 = document.querySelector('.ml1');
+      ml1.textContent = ''
+      const mm1 = document.querySelector('.mm1');
+      mm1.textContent = 'Double Faults'
+      const mr1 = document.querySelector('.mr1');
+      mr1.textContent = ''
+      const ml6 = document.querySelector('.ml6');
+      ml6.textContent = ''
+      const mm6 = document.querySelector('.mm6');
+      mm6.textContent = ''
+      const mr6 = document.querySelector('.mr6');
+      mr6.textContent = ''
+      const ml7 = document.querySelector('.ml7');
+      ml7.textContent = ''
+      const mm7 = document.querySelector('.mm7');
+      mm7.textContent = ''
+      const mr7 = document.querySelector('.mr7');
+      mr7.textContent = ''
+    }
+    function wenbf() {
+      const thead = document.querySelector('.btt');
+      thead.textContent = 'Aces';
+      const mhead = document.querySelector('.btm');
+      mhead.textContent = 'Double Faults';
+      const bhead = document.querySelector('.btb');
+      bhead.textContent = 'Other';
+
+      const tl1 = document.querySelector('.tl1');
+      tl1.textContent = ''
+      const tm1 = document.querySelector('.tm1');
+      tm1.textContent = 'Aces'
+      const tr1 = document.querySelector('.tr1');
+      tr1.textContent = ''
+      const tl2 = document.querySelector('.tl2');
+      tl2.textContent = ''
+      const tm2 = document.querySelector('.tm2');
+      tm2.textContent = 'Ace %'
+      const tr2 = document.querySelector('.tr2');
+      tr2.textContent = ''
+      const tl3 = document.querySelector('.tl3');
+      tl3.textContent = ''
+      const tm3 = document.querySelector('.tm3');
+      tm3.textContent = 'Aces per Service Game'
+      const tr3 = document.querySelector('.tr3');
+      tr3.textContent = ''
+      const tl4 = document.querySelector('.tl4');
+      tl4.textContent = ''
+      const tm4 = document.querySelector('.tm4');
+      tm4.textContent = 'Aces per Set'
+      const tr4 = document.querySelector('.tr4');
+      tr4.textContent = ''
+      const tl5 = document.querySelector('.tl5');
+      tl5.textContent = ''
+      const tm5 = document.querySelector('.tm5');
+      tm5.textContent = ''
+      const tr5 = document.querySelector('.tr5');
+      tr5.textContent = ''
+      const tl6 = document.querySelector('.tl6');
+      tl6.textContent = ''
+      const tm6 = document.querySelector('.tm6');
+      tm6.textContent = ''
+      const tr6 = document.querySelector('.tr6');
+      tr6.textContent = ''
+      const tl7 = document.querySelector('.tl7');
+      tl7.textContent = ''
+      const tm7 = document.querySelector('.tm7');
+      tm7.textContent = ''
+      const tr7 = document.querySelector('.tr7');
+      tr7.textContent = ''
+      adfbfmiddle()
+      adfbfbottom()
     }
 
     function makeScore() {
