--- a/webtapp.html
+++ b/webtapp.html
@@ -935,7 +935,7 @@
       const mr7 = document.querySelector('.mr7');
       mr7.textContent = ''
     }
-    function wenbf() {
+    function adfbf() {
       const thead = document.querySelector('.btt');
       thead.textContent = 'Aces';
       const mhead = document.querySelector('.btm');
