--- a/webtapp.html
+++ b/webtapp.html
@@ -995,6 +995,9 @@
         scorestr += prevSets[i];
         scorestr += ", "
       }
+      if (agames != '0' || bgames != '0') {
+        scorestr += agames + '-' + bgames
+      }
       scorestr += agames + '-' + bgames + ", " + apts + '-' + bpts
       return scorestr
     }
