--- a/webtapp.html
+++ b/webtapp.html
@@ -996,9 +996,9 @@
         scorestr += ", "
       }
       if (agames != '0' || bgames != '0') {
-        scorestr += agames + '-' + bgames
+        scorestr += agames + '-' + bgames + ", "
       }
-      scorestr += agames + '-' + bgames + ", " + apts + '-' + bpts
+      scorestr += apts + '-' + bpts
       return scorestr
     }
 
