--- a/webtapp.html
+++ b/webtapp.html
@@ -1025,7 +1025,7 @@
           apts = gameScores[gameScores.indexOf(apts) + 1]
         }
       }
-      else if (winner === 'B') {
+      else if (winner === 'Bwon') {
         if (bpts === 40 || bpts === 'AD') {
           apts = 0;
           bpts = 0;
