--- a/webtapp.html
+++ b/webtapp.html
@@ -1050,7 +1050,7 @@
         if (tiebreak === 7) {
           bpts++
           if (bpts >= 7 && bpts > apts + 1) {
-            agames++
+            bgames++
             prevSets.push(agames + '-' + bgames + ' ' + '(' + apts + ')')
             apts = 0
             bpts = 0
