--- a/webtapp.html
+++ b/webtapp.html
@@ -1006,6 +1006,13 @@
       return scorestr
     }
 
+    function makeStats() {
+
+    }
+    function makePbp() {
+
+    }
+
 
     function increment() {
       var div = document.querySelector(".score");
