--- a/webtapp.html
+++ b/webtapp.html
@@ -1099,7 +1099,7 @@
         return
       }
       div.textContent = makeScore();
-      makePbp()
+      makePbp(winner, 0)
 
       mstats.tpoints++;
     }
