--- a/webtapp.html
+++ b/webtapp.html
@@ -7,12 +7,16 @@
       width: 500px;
     }
 
+    table {
+      margin: 0 auto;
+    }
+
     .pbp {
       white-space: pre-wrap;
     }
 
-    table {
-      margin: 0 auto;
+    .score {
+      font-size: 1.2em;
     }
   </style>
 </head>
