--- a/webtapp.html
+++ b/webtapp.html
@@ -1022,6 +1022,7 @@
 
     function makeStats(winner, event) {
       mstats.tpoints++;
+      totalbf()
     }
     function makePbp(winner, event) {
       const pbp = document.querySelector('.pbp');
