--- a/webtapp.html
+++ b/webtapp.html
@@ -375,11 +375,11 @@
       const br3 = document.querySelector('.br3');
       br3.textContent = ''
       const bl2 = document.querySelector('.bl2');
-      bl2.textContent = ''
+      bl2.textContent = mstats.apoints
       const bm2 = document.querySelector('.bm2');
       bm2.textContent = 'Total Points Won'
       const br2 = document.querySelector('.br2');
-      br2.textContent = ''
+      br2.textContent = mstats.bpoints
       const bl1 = document.querySelector('.bl1');
       bl1.textContent = ''
       const bm1 = document.querySelector('.bm1');
