--- a/webtapp.html
+++ b/webtapp.html
@@ -322,11 +322,11 @@
       const tr2 = document.querySelector('.tr2');
       tr2.textContent = mstats.bpoints
       const tl3 = document.querySelector('.tl3');
-      tl3.textContent = ''
+      tl3.textContent = (mstats.apoints === 0 && mstats.bpoints === 0) ? '-' : (100 * mstats.apoints / (mstats.apoints + mstats.bpoints))
       const tm3 = document.querySelector('.tm3');
       tm3.textContent = 'Points Won %'
       const tr3 = document.querySelector('.tr3');
-      tr3.textContent = ''
+      tr3.textContent = (mstats.apoints === 0 && mstats.bpoints === 0) ? '-' : (100 * mstats.bpoints / (mstats.apoints + mstats.bpoints))
       const tl4 = document.querySelector('.tl4');
       tl4.textContent = ''
       const tm4 = document.querySelector('.tm4');
