--- a/webtapp.html
+++ b/webtapp.html
@@ -272,23 +272,23 @@
       const mr4 = document.querySelector('.mr4');
       mr4.textContent = ''
       const ml3 = document.querySelector('.ml3');
-      ml3.textContent = ''
+      ml3.textContent = (mstats.totalagames === 0 && mstats.totalbgames === 0) ? '-' : (100 * mstats.totalagames / (mstats.totalagames + mstats.totalbgames)).toFixed(2)
       const mm3 = document.querySelector('.mm3');
       mm3.textContent = 'Games Won %'
       const mr3 = document.querySelector('.mr3');
-      mr3.textContent = ''
+      mr3.textContent = (mstats.totalagames === 0 && mstats.totalbgames === 0) ? '-' : (100 * mstats.totalagames / (mstats.totalbgames + mstats.totalbgames)).toFixed(2)
       const ml2 = document.querySelector('.ml2');
-      ml2.textContent = ''
+      ml2.textContent = mstats.totalagames
       const mm2 = document.querySelector('.mm2');
       mm2.textContent = 'Games Won'
       const mr2 = document.querySelector('.mr2');
-      mr2.textContent = ''
+      mr2.textContent = mstats.totalbgames
       const ml1 = document.querySelector('.ml1');
-      ml1.textContent = ''
+      ml1.textContent = mstats.totalagames + mstats.totalbgames
       const mm1 = document.querySelector('.mm1');
       mm1.textContent = 'Games Played'
       const mr1 = document.querySelector('.mr1');
-      mr1.textContent = ''
+      mr1.textContent = mstats.totalagames + mstats.totalbgames
       const ml6 = document.querySelector('.ml6');
       ml6.textContent = ''
       const mm6 = document.querySelector('.mm6');
