--- a/webtapp.html
+++ b/webtapp.html
@@ -276,7 +276,7 @@
       const mm3 = document.querySelector('.mm3');
       mm3.textContent = 'Games Won %'
       const mr3 = document.querySelector('.mr3');
-      mr3.textContent = (mstats.totalagames === 0 && mstats.totalbgames === 0) ? '-' : (100 * mstats.totalagames / (mstats.totalbgames + mstats.totalbgames)).toFixed(2)
+      mr3.textContent = (mstats.totalagames === 0 && mstats.totalbgames === 0) ? '-' : (100 * mstats.totalbgames / (mstats.totalagames + mstats.totalbgames)).toFixed(2)
       const ml2 = document.querySelector('.ml2');
       ml2.textContent = mstats.totalagames
       const mm2 = document.querySelector('.mm2');
