--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a href="webtapp.html">Tennis Match Stats</a>
   <p>Welcome to my website!!</p>
 
+  <a href="https://www.cnn.com/" class="button">Make a gift</a>
 
   <script src="index.js"></script>
 </body>
