--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 
 <head>
   <title>Welcome!</title>
+  <style>
+    a {
+      text-decoration: none;
+      color: white;
+      background-color: #B31B1B;
+      cursor: pointer;
+      font-family: 'Lato', sans-serif;
+      font-weight: 900;
+      position: relative;
+      border-radius: 0 !important;
+      box-shadow: 2px 2px 4px 0px;
+      text-transform: uppercase;
+      white-space: normal;
+      margin: .5rem !important;
+      padding: 0.5rem 1rem;
+      font-size: 1.05rem;
+      line-height: 1.5;
+      display: inline-block;
+      text-align: center;
+      vertical-align: middle;
+      user-select: none;
+      border: 0 solid;
+
+    }
+  </style>
 </head>
 
 <body>
