--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       border: 0 solid;
 
     }
+
+    div {
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -37,7 +41,9 @@
   <a href="webtapp.html">Tennis Match Stats</a>
   <p>Welcome to my website!!</p>
 
-  <a href="https://www.cnn.com/" class="button">Make a gift</a>
+  <div>
+    <a href="https://www.cnn.com/" class="button">Make a gift</a>
+  </div>
 
   <script src="index.js"></script>
 </body>
