--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Welcome!</title>
   <style>
-    a {
+    .button {
       text-decoration: none;
       color: white;
       background-color: #B31B1B;
@@ -44,6 +44,45 @@
   <div>
     <a href="https://www.cnn.com/" class="button">Make a gift</a>
   </div>
+
+  <div class="upper">
+
+    <div class="inner">
+      <a class="venmo" href="cnn.com">
+        <img src="" alt="img">
+        <span class="amount">$300</span>
+        <p class="subtext">cats rule</p>
+      </a>
+    </div>
+
+    <div class="inner">
+      <a class="venmo" href="cnn.com">
+        <img src="" alt="img">
+        <span class="amount">$300</span>
+        <p class="subtext">cats rule</p>
+      </a>
+    </div>
+
+    <div class="inner">
+      <a class="venmo" href="cnn.com">
+        <img src="" alt="img">
+        <span class="amount">$300</span>
+        <p class="subtext">cats rule</p>
+      </a>
+    </div>
+
+    <div class="inner">
+      <a class="venmo" href="cnn.com">
+        <img src="" alt="img">
+        <span class="amount">$300</span>
+        <p class="subtext">cats rule</p>
+      </a>
+    </div>
+
+  </div>
+
+
+
 
   <script src="index.js"></script>
 </body>
