--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="inner">
       <a class="venmo" href="cnn.com">
-        <img src="" alt="img">
+        <img src="" alt="img" class="im">
         <span class="amount">$300</span>
         <p class="subtext">cats rule</p>
       </a>
@@ -57,7 +57,7 @@
 
     <div class="inner">
       <a class="venmo" href="cnn.com">
-        <img src="" alt="img">
+        <img src="" alt="img" class="im">
         <span class="amount">$300</span>
         <p class="subtext">cats rule</p>
       </a>
@@ -65,7 +65,7 @@
 
     <div class="inner">
       <a class="venmo" href="cnn.com">
-        <img src="" alt="img">
+        <img src="" alt="img" class="im">
         <span class="amount">$300</span>
         <p class="subtext">cats rule</p>
       </a>
@@ -73,7 +73,7 @@
 
     <div class="inner">
       <a class="venmo" href="cnn.com">
-        <img src="" alt="img">
+        <img src="" alt="img" class="im">
         <span class="amount">$300</span>
         <p class="subtext">cats rule</p>
       </a>
