--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="inner">
       <a class="venmo" href="cnn.com">
-        <img src="" alt="img" class="im">
+        <img src="https://raw.githubusercontent.com/simsaidan/CCT/main/wilson.png" alt="img" class="im">
         <span class="amount">$300</span>
         <p class="subtext">cats rule</p>
       </a>
@@ -73,7 +73,7 @@
 
     <div class="inner">
       <a class="venmo" href="cnn.com">
-        <img src="" alt="img" class="im">
+        <img src="https://raw.githubusercontent.com/simsaidan/CCT/main/wilson.png" alt="img" class="im">
         <span class="amount">$300</span>
         <p class="subtext">cats rule</p>
       </a>
