--- a/index.html
+++ b/index.html
@@ -30,6 +30,37 @@
     div {
       text-align: center;
     }
+
+    .amount {
+      font-size: 3rem;
+      color: black;
+      box-sizing: border-box;
+      font-family: 'Lato';
+      font-weight: 900;
+      cursor: pointer;
+      font-style: normal;
+      line-height: 1.6;
+    }
+
+    .subtext {
+      font-size: 16px;
+      font-style: italic !important;
+      max-width: 100% !important;
+      margin-top: 0;
+      margin-bottom: 1 rem;
+      box-sizing: border-box;
+      display: block;
+      margin-block-start: 1em;
+      margin-block-end: 1em;
+      margin-inline-end: 0px;
+      margin-inline-start: 0px;
+      font-weight: 900;
+      font-family: 'Lato';
+      color: #B31B1B;
+      cursor: pointer;
+      text-align: left;
+      line-height: 1.6;
+    }
   </style>
 </head>
 
