--- a/index.html
+++ b/index.html
@@ -31,6 +31,45 @@
       text-align: center;
     }
 
+    .upper {
+      justify-content: center !important;
+      display: flex;
+      flex-wrap: wrap;
+      margin-right: -15px;
+      margin-left: -15px;
+      box-sizing: border-box;
+      font-size: 1rem;
+      color: #495057;
+      font-family: "Proxima Nova", "helvetica", arial, sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.6;
+      text-align: left;
+
+    }
+
+    .inner {
+      flex-basis: 0;
+      flex-grow: 1;
+      max-width: 100%;
+      position: relative;
+      width: 100%;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 1rem !important;
+      padding-top: 1rem !important;
+      flex: 0 0 33.33%;
+      box-sizing: border-box;
+      display: block;
+      font-size: 1 rem;
+      color: #495057;
+      font-family: "Proxima Nova", "helvetica", arial, sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.6;
+      text-align: left;
+    }
+
     .amount {
       font-size: 3rem;
       color: black;
