--- a/webtapp.html
+++ b/webtapp.html
@@ -43,7 +43,7 @@
     <input type="radio" name="whowon" value="Awon"> Player A
     <input type="radio" name="whowon" value="Bwon"> Player B
   </div>
-  <div class="pointq">How was the point won?</div>
+  <div class="pointq">How was the point won???</div>
   <div class="radio">
     <input type="radio" name="howwon" value="ace"> Ace
     <input type="radio" name="howwon" value="swinner"> Service Winner
@@ -492,6 +492,7 @@
     }
 
     function servingbfbottom() {
+      confirm("Cat poop?")
       const bl5 = document.querySelector('.bl5');
       bl5.textContent = ''
       const bm5 = document.querySelector('.bm5');
