--- a/webtapp.html
+++ b/webtapp.html
@@ -492,7 +492,7 @@
     }
 
     function servingbfbottom() {
-      confirm("Cat poop?")
+      servingbfbottom()
       const bl5 = document.querySelector('.bl5');
       bl5.textContent = ''
       const bm5 = document.querySelector('.bm5');
