--- a/webtapp.html
+++ b/webtapp.html
@@ -617,7 +617,7 @@
     }
 
     function servingbf() {
-      confirm("Cat poop?")
+      servingbfbottom()
       statmode = 'Serving'
       const thead = document.querySelector('.btt');
       thead.textContent = 'Serve';
